fix mobile view content overflowing issue and iphone input autofocus (#11)
* added maximum scale

* fix body and app layout

* fix ingredients input strecthed

* fix the searchform layouts

* dietary restrictions mobile view

* fix searchform layout

* slight ui fix on generated recipe no scroll for mobile

* max h screen on desktop

* remove max h screen for desktop view

* fix some colors and added headers

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -73,6 +73,9 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground m-0 min-w-[320px] min-h-screen;
+  }
+  #app {
+    @apply max-w-[1280px] mx-auto;
   }
 }
